1. Метод .of